--- a/tclserv/doc/slides/tk.tex
+++ b/tclserv/doc/slides/tk.tex
@@ -1,8 +1,6 @@
 %%
-%% Anthony Mallet - Sun Dec  8 2002
-%% Copyright (C) 2002 LAAS/CNRS 
-%%
-%% $Id$
+%% Anthony Mallet - Sun Dec  8 2002-2009
+%% Copyright (C) 2002-2009 LAAS/CNRS 
 %%
 \documentclass[a4paper,landscape,smooth]{show}
 \usepackage{depend,aeguill,cartouche}
@@ -11,9 +9,9 @@
 \usepackage[latin1]{inputenc}
 
 \context{\vfill}
-\title{Introduction à \Huge Tk}
-\author{Anthony Mallet\\ basé sur le cours de E.J. Friedman-Hill}
-\date{6 décembre 2002}
+\title{Introducing Tk}
+\author{Anthony Mallet\\ based on E.J. Friedman-Hill's slides}
+\date{November 2009}
 
 \newcommand{\tclex}[2]{\texttt{#1}\\$\rightarrow$ \texttt{#2}}
 
@@ -22,30 +20,28 @@
 
 % =======================================================================
 
-\begin{part}{Introduction}{Le « toolkit » Tk}
+\begin{part}{Introduction}{The Tk toolkit}
    \vfill
    \begin{bitemize}{color@bulle}
-      \item {\bf Le problème} : Construire une application avec une
-	 interface est complexe. D'autant plus si la portabilité est en
-	 jeu (multi-plateforme).
+      \item {\bf problem}: building an application with a GUI is hard.
+        Even more if portability is wanted. 
 
-      \item {\bf La mauvaise solution} : 
-	 C++, toolkits orientés objet, Java AWT, ...
-	 Peu de bénéfices : nécéssité de programmer a un niveau assez
-	 bas.
+      \item {\bf Bad solutions} : 
+	 C++, object oritented toolkits, Java AWT, ...
+         Little benefits: still programming a quite low level.
 
-      \item {\bf La bonne solution} : 
-	 Élever le niveau de programmation. Créer des interfaces à l'aide
-	 de scripts Tcl.
+      \item {\bf Good solution}: 
+        Raise the programming level. Use a scripting langage (Tcl) to
+        create and manage interfaces.
    \end{bitemize}
    \vfill
-   (Argumentaire de {\bf E.J. Friedman-Hill})
+   (Arguments by {\bf E.J. Friedman-Hill})
    \vfill
 \end{part}
 
 % -----------------------------------------------------------------------
 
-\begin{tslide}{Exemple}
+\begin{tslide}{Example}
    \vfill
    {\tt
    listbox .list -yscroll ".scroll set"\\
@@ -59,27 +55,26 @@
 \hspace*{1cm}.list insert end \$i\\ \}\\
    }
    \vfill
-   \vbox to0pt{\vss\hfill\docfig[width=0.3\linewidth]{fig/file-browser.jpg}}
+   \vbox to0pt{\vss\hfill\includegraphics[width=0.3\linewidth]{fig/file-browser.jpg}}
 \end{tslide}
 
 % -----------------------------------------------------------------------
 
-\begin{tslide}{Éléments d'une interface Tk}
+\begin{tslide}{Elements of a Tk interface}
    \vfill
    \begin{bitemize}{color@bulle}
-      \item Commandes Tcl supplémentaires : 
+      \item new Tcl commands:
 	 \begin{itemize}
-	    \item Créer des objets {\em à la} Motif (multi-platorme).
-            \item Agencer les objets. 
-            \item Lier des évènements à des scripts Tcl. 
-            \item Manipuler la selection, le focus, le window manager,
-		  etc. 
+	    \item create widgets in a hierarchical way.
+            \item layout widgets.
+            \item bind events to Tcl scripts.
+            \item interact with selection, input focus, window managers etc. 
 	 \end{itemize}
 
-      \item Bibliothèque de fonctions C :
+      \item Set of C libraries :
 	 \begin{itemize}
-	    \item Créer de nouvelles classes. 
-	    \item Créer de nouveau gestionnaires de « géométrie ». 
+	    \item create new widgets 
+	    \item create new geometry managers
 	 \end{itemize}
    \end{bitemize}
    \vfill
@@ -87,17 +82,17 @@
 
 % -----------------------------------------------------------------------
 
-\begin{tslide}{Classe de base : le {\em widget}}
+\begin{tslide}{Basic class: {\em widgets}}
    \vfill
    {\bf Widgets}
    \begin{bitemize}{color@bulle}
-      \item Windowed gadgets $\rightarrow$ gadgets fenêtrés
+      \item Windowed gadgets
       \item gadget (n.)\\
 	 1. a small mechanical device or appliance.\\
 	 2. any object that is interesting for its ingenuity or novelty
 	    rather than for its practical use.\\
 
-	 [ perhaps from French « gachette » : lock catch, trigger,
+	 [ perhaps from French ``gachette'': lock catch, trigger,
 	    diminutive of gache staple ].
    \end{bitemize}
    \vfill
@@ -123,22 +118,20 @@
 
 % -----------------------------------------------------------------------
 
-\begin{tslide}{Hierarchie de widgets}
-   \vfill\begin{center}
-      \docfig[width=0.9\linewidth,psfrag]{tk-hierarchy.fig}
-   \end{center}\vfill
-\end{tslide}
+%\begin{tslide}{Widgets hierarchy}
+%   \vfill\begin{center}
+%      \docfig[width=0.9\linewidth,psfrag]{tk-hierarchy.fig}
+%   \end{center}\vfill
+%\end{tslide}
 
 % -----------------------------------------------------------------------
 
-\begin{tslide}{Création de widgets}
+\begin{tslide}{Creating widgets}
    \vfill
    \begin{bitemize}{color@bulle}
-      \item Chaque widget a une classse : button, listbox, scrollbar,
+      \item Each widget belongs to a class: button, listbox, scrollbar,
 	    etc. 
-      \item Une commande de creation pour chaque classe, utilisée pour
-	    créer des instances.
-	    
+      \item One creation command for each class, used to create instances:\\
 	    {\tt button .a.b -text Quit -command exit}\\
 	    {\tt scrollbar .x -orient horizontal}
    \end{bitemize}
@@ -149,9 +142,7 @@
 
 \begin{tslide}{Configuration}
    \vfill
-   Options de configuration défines par la classse. Exemple pour la
-   classe Bouton:
-
+   Configuration options defined by the class. Example for the Button class:\\
    {\tt
       -activebackground -disabledforeground -justify -underline \\
       -activeforeground -font -padx -width \\
@@ -164,18 +155,17 @@
 }
 
    \vfill
-   Si certaines options ne sont pas spécifiées explicitement, elles
-   viennent du fichier {\tt .Xdefaults} (Unix).
+   If options are not explicitely specifed, they can come from Unix X defaults.
+   or from Tk defaults.
    \vfill
 \end{tslide}
 
 % -----------------------------------------------------------------------
 
-\begin{tslide}{Commandes associées aux widgets}
+\begin{tslide}{Associating commands to widgets}
    \vfill
-   Une commande Tcl pour chaque widget, nommée d'après le nom du widget.
-
-   Permet de reconfigurer et de manipuler le widget~:
+   A Tcl command, named after the widget allows to (re)configure 
+   and manipulate it:
 
    {\tt
       button .a.b\\
@@ -189,7 +179,7 @@
       .a.b configure -foreground\\
       $\rightarrow$ -foreground foreground Foreground blue blue}
 
-   La commande est supprimée quand le widget est détruit
+    The command is removed from the interpreter when the widget is destroyed.
    \vfill
 \end{tslide}
 
@@ -200,53 +190,46 @@
    {\bf Geometry management}
    \begin{bitemize}{color@bulle}
       \item {\tt place}
-
-	 Placement absolu du widget par rapport à son parent. Spécification
-	 des coordonnées.
+        Absolute positionning of the widget relativelty to its parent.
 
       \item {\tt pack}
-	 
-	 Arrange les widgets en fonction de la dimension du parent et des
-	 autres widgets au même niveau.
+        Positions widgests depending on the size of the parent and of 
+        other widgets at the same level.
 
       \item {\tt grid}
-
-	 Arrange les widgets dans un tableau à deux dimensions.
-	 
+        Puts widgets in a 2-dimensional array.
       \item {\tt frame}
-      
-	 Pour créer des arrangements plus complexes.
+        To create more complex setups.
    \end{bitemize}
    \vfill
 \end{tslide}
 
 % -----------------------------------------------------------------------
 
-\begin{tslide}{Connection à tcl}
+\begin{tslide}{Connection to Tcl}
    \vfill
    \begin{bitemize}{color@bulle}
-      \item Scripts Tcl pour faire communiquer les widgets avec
-	    l'application, ou les autres widgets.
+      \item Tcl Scripts to let a widget talk to the application 
+        or to other widgets 
 
 	    {\tt button .a.b -command exit}\\
 	    {\tt scrollbar .s -command ".text yview"}
 
-      \item L'application utilise les commandes des widgets pour
-	    communiquer avec l'interface.
+      \item The application uses the widgets commands to communicate
+        with the interface.
    \end{bitemize}
    \vfill
 \end{tslide}
 
 % -----------------------------------------------------------------------
 
-\begin{tslide}{Évènements}
+\begin{tslide}{Events}
    \vfill
    \begin{bitemize}{color@bulle}
-      \item Associer des scripts Tcl aux évènements utilisateur : 
-
+      \item Bind Tcl scripts to user events:
          {\tt bind .b <Control-h> \{puts "control-h"\}}
 
-      \item Nommage des évènements : 
+      \item Naming of events: 
 
 	 {\tt <Double-Control-ButtonPress-1> \\
 	       <KeyPress> \\
@@ -263,18 +246,18 @@
 
 % -----------------------------------------------------------------------
 
-\begin{tslide}{Autres commandes}
+\begin{tslide}{Other commands}
    \vfill
    \begin{bitemize}{color@bulle}
-      \item Selection (X11): 
+      \item X11 Selection: 
 
 	 {\tt selection get}
 
-      \item Envoyer des commandes à d'autres applications Tk (X11) :
+      \item Sending commands to other Tk applications: 
 
 	 {\tt send tgdb "break tkEval.c:200" }
 
-      \item Informations sur les fenêtres :
+      \item Information on windows:
 
 	 {\tt winfo width .x\\
 	       winfo children .\\
