--- a/doc/slides/genom.tex
+++ b/doc/slides/genom.tex
@@ -33,8 +33,8 @@
 \author{Sara Fleury - Matthieu Herrb}
  
 \date{October 2009\\
-\figw{./figures/openlaas.png}{4cm}}
-\institute{\includegraphics[height=2cm]{openlaas}}
+\figw{./figures/openlogo.png}{4cm}}
+\institute{\includegraphics[height=2cm]{openlogo}}
 \date{October 2009}
 
 
