--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Genom 2.6, xxx xx 2010.
 
+ 97. Implement asynchronous execution tasks.
  96. Use h2getTimeSpec() to read the clock to compute codels duration.
  95. Cross-compilation fixes for OpenEmbedded.
  94. Update slides: incompatible_with -> interrupt_activity.
